update buildTimetable function with create subject button code.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,7 @@
         </TableRow>
 
         <TableRow
+            android:id="@+id/dayRow"
             android:layout_height="wrap_content">
 
             <GridLayout
