add code to build table to create add subject buttons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
         </TableRow>
 
         <TableRow
-            android:id="@+id/dayRow"
+            android:id="@+id/subjectsRow"
             android:layout_height="wrap_content">
 
             <GridLayout
