--- a/app/src/main/res/layout/activity_subject.xml
+++ b/app/src/main/res/layout/activity_subject.xml
@@ -75,6 +75,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
+            android:backgroundTint="#0090FF"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
@@ -82,6 +83,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
+            android:backgroundTint="#FFEB3B"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
@@ -89,6 +91,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
+            android:backgroundTint="#49F800"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
@@ -96,6 +99,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
+            android:backgroundTint="#FF0028"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
@@ -103,13 +107,15 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
+            android:backgroundTint="#FF8200"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
-            android:id="@+id/btnPink"
+            android:id="@+id/btnPurple"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
+            android:backgroundTint="#9C27B0"
             style="?android:attr/borderlessButtonStyle" />
 
     </GridLayout>
