updated grid layouts to better fit subject buttons created ontouch listener for buttons to allow for drag selection

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,6 @@
             <Button
                 android:id="@+id/btnHrs"
                 style="@style/Widget.AppCompat.Button"
-                android:layout_width="wrap_content"
                 android:onClick="hrsClicked"
                 android:text="hrs"
                 android:textSize="24sp"
@@ -69,90 +68,107 @@
 
         <TableRow
             android:id="@+id/subjectsRow"
-            android:layout_height="wrap_content">
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:alignmentMode="alignBounds"
-                android:columnCount="1"
-                android:useDefaultMargins="true">
+            <LinearLayout
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_height="36dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="fill"
+                    android:layout_weight="1"
                     android:text="9am"
                     android:textAlignment="center"
-                    android:textSize="24sp"
-                    android:layout_gravity="fill"/>
+                    android:textSize="24sp" />
 
                 <TextView
-                    android:layout_height="36dp"
-                    android:layout_gravity="fill"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="10am"
                     android:textAlignment="center"
                     android:textSize="24sp" />
 
                 <TextView
-                    android:layout_height="36dp"
-                    android:layout_gravity="fill"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="11am"
                     android:textAlignment="center"
                     android:textSize="24sp" />
 
 
                 <TextView
-                    android:layout_height="36dp"
-                    android:layout_gravity="fill"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="12pm"
                     android:textAlignment="center"
                     android:textSize="24sp" />
 
                 <TextView
-                    android:layout_height="36dp"
-                    android:layout_gravity="fill"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="1pm"
                     android:textAlignment="center"
                     android:textSize="24sp" />
 
                 <TextView
-                    android:layout_height="36dp"
-                    android:layout_gravity="fill"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="2pm"
                     android:textAlignment="center"
                     android:textSize="24sp" />
 
                 <TextView
-                    android:layout_height="36dp"
-                    android:layout_gravity="fill"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="3pm"
                     android:textAlignment="center"
                     android:textSize="24sp" />
 
                 <TextView
-                    android:layout_height="36dp"
-                    android:layout_gravity="fill"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="4pm"
                     android:textAlignment="center"
                     android:textSize="24sp" />
 
-            </GridLayout>
+            </LinearLayout>
 
             <GridLayout
                 android:id="@+id/gridMon"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
+                android:background="@android:color/darker_gray"
                 android:columnCount="1">
 
             </GridLayout>
 
             <GridLayout
                 android:id="@+id/gridTue"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
+                android:background="@android:color/darker_gray"
                 android:columnCount="1">
 
             </GridLayout>
 
             <GridLayout
                 android:id="@+id/gridWed"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@android:color/darker_gray"
                 android:layout_width="match_parent"
                 android:columnCount="1">
 
@@ -160,14 +176,20 @@
 
             <GridLayout
                 android:id="@+id/gridThu"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
+                android:background="@android:color/darker_gray"
                 android:columnCount="1">
 
             </GridLayout>
 
             <GridLayout
                 android:id="@+id/gridFri"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
+                android:background="@android:color/darker_gray"
                 android:columnCount="1">
 
             </GridLayout>
