--- a/app/src/main/res/layout/activity_subject.xml
+++ b/app/src/main/res/layout/activity_subject.xml
@@ -7,12 +7,25 @@
     android:orientation="vertical"
     tools:context=".SubjectActivity">
 
+
     <TextView
+        android:id="@+id/subjectTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="36sp"
-        android:text="Subject Name"
+        android:text=""
+        android:layout_margin="16dp"
+        />
+
+
+    <TextView
+        android:layout_margin="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="36sp"
+        android:text="Name"
     />
 
     <EditText
@@ -24,24 +37,7 @@
         />
 
     <TextView
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="36sp"
-        android:text="Select Class Duration"
-        />
-    <Spinner
-        android:id="@+id/subjectDuration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_margin="16dp"
-        android:entries="@array/duration">
-    </Spinner>
-
-    <TextView
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -57,14 +53,15 @@
         />
 
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="36sp"
-        android:text="Select Subject Colour"/>
+        android:text="Colour"/>
 
     <GridLayout
+        android:id="@+id/colorBtns"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnCount="3"
@@ -75,52 +72,59 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
-            android:backgroundTint="#0090FF"
+            android:textSize="36sp"
+            android:background="#0090FF"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
+            android:textSize="36sp"
             android:id="@+id/btnYellow"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
-            android:backgroundTint="#FFEB3B"
+            android:background="#FFEB3B"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
+            android:textSize="36sp"
             android:id="@+id/btnGreen"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
-            android:backgroundTint="#49F800"
+            android:background="#49F800"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
+            android:textSize="36sp"
             android:id="@+id/btnRed"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
-            android:backgroundTint="#FF0028"
+            android:background="#FF0028"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
+            android:textSize="36sp"
             android:id="@+id/btnOrange"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
-            android:backgroundTint="#FF8200"
+            android:background="#FF8200"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
+            android:textSize="36sp"
             android:id="@+id/btnPurple"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="selectColour"
-            android:backgroundTint="#9C27B0"
+            android:background="#9C27B0"
             style="?android:attr/borderlessButtonStyle" />
 
     </GridLayout>
 
     <LinearLayout
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -132,6 +136,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="cancelSubject"
+        android:background="#E2E91E1E"
         android:text="Cancel"
         style="?android:attr/borderlessButtonStyle" />
 
@@ -141,6 +146,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="addSubject"
+        android:background="#8BC34A"
         android:text="Add"
         style="?android:attr/borderlessButtonStyle" />
 
