--- a/app/src/main/res/layout/activity_subject.xml
+++ b/app/src/main/res/layout/activity_subject.xml
@@ -16,10 +16,12 @@
         android:textSize="36sp"
         android:text=""
         android:layout_margin="8dp"
+        android:layout_weight="1"
         />
 
 
     <TextView
+        android:layout_weight="1"
         android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,6 +31,7 @@
     />
 
     <EditText
+        android:layout_weight="1"
         android:id="@+id/subjectName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,6 +40,7 @@
         />
 
     <TextView
+        android:layout_weight="1"
         android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,6 +49,7 @@
         android:text="Classroom"/>
 
     <EditText
+        android:layout_weight="1"
         android:id="@+id/subjectRoom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,6 +58,7 @@
         />
 
     <TextView
+        android:layout_weight="1"
         android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,6 +67,7 @@
         android:text="Colour"/>
 
     <GridLayout
+        android:layout_weight="1"
         android:id="@+id/colorBtns"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
